fib-calculator-k8s/k8s/worker-config.yaml
#DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
    name: worker-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: worker
    template:
        metadata:
            labels:
                component: worker
        spec:
            containers:
                - name: worker
                  image: saarthak08/complex-multistage-docker-worker:v2
                  ports:
                      - containerPort: 3000
