fib-calculator-k8s/k8s/client-config.yaml
# DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
    name: client-deployment
spec:
    replicas: 3
    selector:
        matchLabels:
            component: client
    template:
        metadata:
            labels:
                component: client
        spec:
            containers:
                - name: client
                  image: saarthak08/complex-multistage-docker-client
                  ports:
                      - containerPort: 3000

---
# CLUSTER-IP-SERVICE
apiVersion: v1
kind: Service
metadata:
    name: client-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: client
    ports:
        - port: 3000
          targetPort: 3000
