fib-calculator-k8s/k8s/server-config.yaml
# DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
    name: server-deployment
spec:
    replicas: 3
    selector:
        matchLabels:
            component: server
    template:
        metadata:
            labels:
                component: server
        spec:
            containers:
                - name: server
                  image: saarthak08/complex-multistage-docker-server:v3
                  ports:
                      - containerPort: 5000
---
# CLUSTER-IP-SERVICE
apiVersion: v1
kind: Service
metadata:
    name: server-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: server
    ports:
        - port: 5000
          targetPort: 5000
