fib-calculator-k8s/k8s/ingress-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-service
spec:
    ingressClassName: nginx
    rules:
        - http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: client-cluster-ip-service
                            port:
                                number: 3000
                  - path: /api/
                    pathType: Prefix
                    backend:
                        service:
                            name: server-cluster-ip-service
                            port:
                                number: 5000
